# sqlite3-cache

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  setup.cfg  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  main.yml  release.yml  test.yml
css/: docs.css
docs/: index.md  ref.md
ref/: index.html
search/: search_index.json
sqlite3_cache/: __init__.py  cache.py
sqlite_cache/: __init__.py  sqlite_cache.py
tests/: conftest.py  test_cache.py
