[tool.poetry]
name = "sqlite3-cache"
version = "0.2.2"
description = "Use SQLite3 as cache."
authors = [
    "Matti Lamppu <lamppu.matti.akseli@gmail.com>",
]
packages = [
    { include = "sqlite3_cache" },
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MrThearMan/sqlite3-cache"
repository = "https://github.com/MrThearMan/sqlite3-cache"
keywords = [
    "sqlite",
    "sqlite3",
    "cache",
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
include = [
    "README.md",
    "LICENSE",
]
exclude = [
    "tests",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/MrThearMan/sqlite3-cache/issues"

[tool.poetry.dependencies]
python = ">=3.9,<4"
typing-extensions = { version = ">=4.10.0", python = "<3.11" }

[tool.poetry.group.test.dependencies]
pytest = "8.3.3"
coverage = "7.6.1"
pytest-asyncio = "0.24.0"
freezegun = "1.5.1"
tox = "4.20.0"
tox-gh-actions = "3.2.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.6.1"
pymdown-extensions = "10.10"
mkdocs-mermaid2-plugin = "1.1.1"

[tool.poetry.group.lint.dependencies]
mypy = "1.11.2"
pre-commit = "3.8.0"

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
extend-exclude = [
    "tests*",
]
lint.explicit-preview-rules = true
lint.preview = true
lint.select = [
    "A",        # flake8-builtins
    "ANN",      # flake8-annotations
    "ARG",      # flake8-unused-arguments
    "B",        # flake8-bugbear
    "BLE",      # flake8-blind-except
    "C90",      # mccabe
    "C4",       # flake8-comprehensions
    "COM",      # flake8-commas
    "D200",     # pydocstyle: One-line docstring should fit on one line
    "D201",     # pydocstyle: No blank lines allowed before function docstring (found {num_lines})
    "D202",     # pydocstyle: No blank lines allowed after function docstring (found {num_lines})
    "D209",     # pydocstyle: Multi-line docstring closing quotes should be on a separate line
    "D213",     # pydocstyle: Multi-line docstring summary should start at the second line
    "DTZ",      # flake8-datetimez
    "E",        # pycodestyle errors
    "EM",       # flake8-errmsg
    "F",        # pyflakes
    "FA",       # flake8-future-annotations
    "FBT",      # flake8-boolean-trap
    "FLY",      # flynt
    "G",        # flake8-logging-format
    "I",        # isort
    "ICN",      # flake8-import-conventions
    "INP",      # flake8-no-pep420
    "ISC",      # flake8-implicit-str-concat
    "LOG",      # flake8-logging
    "N",        # pep8-naming
    "PERF",     # perflint
    "PGH",      # pygrep-hooks
    "PIE",      # flake8-pie
    "PL",       # pylint
    "PT",       # flake8-pytest-style
    "PTH",      # flake8-use-pathlib
    "PYI",      # flake8-pyi
    "Q",        # flake8-quotes
    "R",        # Refactor
    "RET",      # flake8-return
    "RSE",      # flake8-raise
    "RUF",      # ruff-specific rules
    "S",        # flake8-bandit
    "SIM",      # flake8-simplify
    "SLF",      # flake8-self
    "T20",      # flake8-print
    "TCH",      # flake8-type-checking
    "TID",      # flake8-tidy-imports
    "TRY",      # tryceratops
    "UP",       # pyupgrade
    "W",        # pycodestyle warnings
]
# Preview rules
lint.extend-select = [
    "B909",     # loop-iterator-mutation
    "FURB110",  # if-exp-instead-of-or-operator
    "FURB142",  # for-loop-set-mutations
    "FURB145",  # slice-copy
    "FURB171",  # single-item-membership-test
    "FURB187",  # list-reverse-copy
    "PLE0307",  # invalid-str-return-type
    "PLR0916",  # too-many-boolean-expressions
    "PLR1730",  # if-stmt-min-max
    "PLR1733",  # unnecessary-dict-index-lookup
    "PLR1736",  # unnecessary-list-index-lookup
    "PLR6104",  # non-augmented-assignment
    "PLW0211",  # bad-staticmethod-argument
    "PLW0642",  # self-or-cls-assignment
    "RUF021",   # parenthesize-chained-operators
    "RUF022",   # unsorted-dunder-all
    "UP042",    # replace-str-enum
]
lint.ignore = [
    "ANN101",   # Missing type annotation for `self` in method
    "ANN102",   # Missing type annotation for `cls` in method
    "ANN401",   # Any-typing allowed
    "ARG002",   # Unused method argument
    "ARG003",   # Unused class method argument
    "N805",     # First argument of a method should be named `self`
    "SLF001",   # Accessing private members is allowed
    "UP007",    # Use `X | Y` for union type annotations
    "G004",     # Logging statement uses f-string
    "S602",     # Broken: https://github.com/astral-sh/ruff/issues/4045
    "S603",     # Broken: https://github.com/astral-sh/ruff/issues/4045
    "RUF012",   # Mutable class attributes
    #
    # Conflicting with ruff-format
    #
    "COM812",   # missing-trailing-comma
    "COM819",   # prohibited-trailing-comma
    "D206",     # indent-with-spaces
    "D300",     # triple-single-quotes
    "E111",     # indentation-with-invalid-multiple
    "E114",     # indentation-with-invalid-multiple-comment
    "E117",     # over-indented
    "ISC001",   # single-line-implicit-string-concatenation
    "ISC002",   # multi-line-implicit-string-concatenation
    "Q000",     # bad-quotes-inline-string
    "Q001",     # bad-quotes-multiline-string
    "Q002",     # bad-quotes-docstring
    "Q003",     # avoidable-escaped-quote
    "W191",     # tab-indentation
]

[tool.ruff.lint.extend-per-file-ignores]
"test_*.py" = [
    "ANN",      # No need to annotate tests
    "N801",     # Allow whatever class names in tests
    "N802",     # Allow whatever function names in tests
    "N815",     # Allow whatever variable names in tests
    "PLR0915",  # Can have as many statements as needed
    "PLR2004",  # Magic value comparisons are allowed in tests
    "S101",     # Assert is fine
    "S105",     # Hardcoded passwords are fine in tests
    "S106",     # Hardcoded passwords are fine in tests
    "S108",     # No need to care about insecure temp file usages in tests
    "S311",     # Pseudo-random generators are fine here
    "SLF",      # Allow accessing private members in tests
    "UP",       # No upgrade rules
]
"conftest.py" = [
    "ARG",      # Fixtures can be unused
    "ANN",      # No need to annotate tests
    "UP",       # No upgrade rules
]

[tool.ruff.lint.isort]
combine-as-imports = false
split-on-trailing-comma = false
known-first-party = [
    "sqlite3_cache",
]

[tool.ruff.lint.flake8-import-conventions]
banned-from = [
    "base64",
    "csv",
    "datetime",
    "hashlib",
    "hmac",
    "json",
    "logging",
    "math",
    "os",
    "pickle",
    "random",
    "re",
    "shutil",
    "subprocess",
    "sys",
    "tempfile",
    "time",
    "uuid",
    "xml",
    "yaml",
]

[tool.ruff.lint.pylint]
max-args = 7

[tool.mypy]
python_version = "3.12"
warn_return_any = "True"
warn_unused_configs = "True"

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
omit = [
    "tests/*",
    "docs/*",
    ".venv/*",
    ".tox/*",
]
exclude_lines = [
    "if TYPE_CHECKING:",
    "except ImportError:",
    "pragma: no cover",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39, 310, 311, 312}
isolated_build = true

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
allowlist_externals =
    poetry
setenv =
    PYTHONPATH = {toxinidir}
commands =
    poetry install
    poetry run coverage run -m pytest -vv -s --log-cli-level=INFO
"""

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
